2014-08-21  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ItkToolbox/elastix_transf_imcoord2.m: (0.1.0)

	- elastix_transf_imcoord Convert 2D pixel coordinates using
	elastix/transformix transform.

	* Move elastix functions to matlab/ItkToolbox:

	- matlab/FiltersToolbox/elastix.m
	- matlab/FiltersToolbox/elastix_read_file2param.m
	- matlab/FiltersToolbox/elastix_read_reg_output.m
	- matlab/FiltersToolbox/elastix_write_param2file.m
	- matlab/FiltersToolbox/transformix.m

2014-08-20  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/smacof.m: (0.1.0)

	- Add opts.Update = 'reduced' for the reduced form of the Guttman
	update proposed by Gasner et al.

	* Rename matlab/CardiacToolbox/blockface_find_frame_shifts.m as
	matlab/CardiacToolbox/blockface_intraframe_reg.m.

	- This function no longer tries to detect jumps, which is more
	complicated, but only do the registration between frames.

	* matlab/CardiacToolbox/blockface_find_frame_shifts.m: (0.4.0)

	- Change translation transform by similarity transform, because in
	some cases, frames shift not by translation but because the camera
	seems to zoom in or out a bit.

	- Tune the registration parameters so that they get a good precise
	registration between frames (e.g. switch to
	AdvancedMattesMutualInformation, make iteration steps smaller,
	etc.).

	- Don't return tnorm, as with similarity transforms it doesn't
	make much sense. Instead, we return all the parameters of the
	registration.

	- Use struct instead of file for registration parameters.

	- Swap input arguments so that path goes first, then file names.

	* matlab/FiltersToolbox/elastix.m: (0.2.0)

	- Input parameters for the registration can be a struct apart from
	a text file now.

	- Input images (whether input is a filename or array) that are RGB
	(colour) are now converted to grayscale before processing, because
	elastix will only use the first channel otherwise, and ignore the
	rest.

	- Rename input argument param -> opts.
